# llm-zoomcamp-learning-journey-

./: README.md  homework_2_vector_search.ipynb
Workshop | Building First RAG App/: appunti.txt  ingest.py  main.py  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag.ipynb  rag_helper.py
