[project]
name = "rag-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.101.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "minsearch>=0.0.11",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "sqlitesearch>=0.0.4",
]
